更新图片地址

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
 	</section>
 	<section class="aboutMe active">
 		<div>
-			<img src="./img/photo.jpg" alt="MyPhoto">
+			<img src="https://i.loli.net/2017/11/19/5a1127ba836a3.jpg" alt="MyPhoto">
 			<div>
 				<h1>田宇鹏</h1>
 				<h5>26岁 未婚&nbsp;&nbsp;&nbsp;</h5>
@@ -76,7 +76,7 @@
 					<h3>网易云音乐 - 移动端页面</h3>
 					<svg><use xlink:href="#icon-shouji"></use></svg>
 				</div>
-				<img src="./img/music-163.png" alt="cover">
+				<img src="https://i.loli.net/2017/09/14/59ba9371558e3.png" alt="cover">
 				<div class="content">
 					<p>这是一个非官方的网易云音乐移动端页面，能够实现歌曲的搜索、播放/暂停等功能。</p>
 					<p><span>部署：</span>LeanCloud + 七牛云</p>
@@ -100,7 +100,7 @@
 					<svg><use xlink:href="#icon-shouji"></use></svg>
 					<svg><use xlink:href="#icon-pc"></use></svg>
 				</div>
-				<img src="./img/mafia.png" alt="cover">
+				<img src="https://i.loli.net/2017/11/19/5a11274ee7820.png" alt="cover">
 				<div class="content">
 					<p>这是一款当下流行的桌游——天黑请闭眼的功能型App。它基本具备了较为完善的游戏功能，可以直接封装成App使用。</p>
 					<p><span>功能：</span>设置玩家数量、自动分配角色、判断游戏进度等。</p>
@@ -122,7 +122,7 @@
 					<h3>ToDoList - 在线备忘录</h3>
 					<svg><use xlink:href="#icon-pc"></use></svg>
 				</div>
-				<img src="./img/todolist.png" alt="cover">
+				<img src="https://i.loli.net/2017/11/19/5a112796e2c63.png" alt="cover">
 				<div class="content">
 					<p>这是一个基于 React 框架的在线待办事项清单，支持云端数据漫游。</p>
 					<p><span>功能：</span>登录/注册/密码找回、云端存储/读取数据。</p>
@@ -144,7 +144,7 @@
 					<h3>英雄联盟官方网站 - PC端首页</h3>
 					<svg><use xlink:href="#icon-pc"></use></svg>
 				</div>
-				<img src="./img/lol.png" alt="cover">
+				<img src="https://ooo.0o0.ooo/2017/09/14/59ba937157950.png" alt="cover">
 				<div class="content">
 					<p>这是一个桌面端 HTML5 静态页面项目，像素级精确还原了英雄联盟官方网站首页。</p>
 					<p><span>技术栈：</span>jQuery + HTML5</p>
