添加新项目

--- a/resume.html
+++ b/resume.html
@@ -138,6 +138,26 @@
 					<p>点击体验</p>
 				</div>
 			</li>
+			<li class="weather">
+				<div class="background"></div>
+				<div class="header">
+					<h3>Ajax 天气小插件</h3>
+					<svg><use xlink:href="#icon-pc"></use></svg>
+				</div>
+				<img src="https://i.loli.net/2017/11/20/5a12a19a7b43c.png" alt="cover">
+				<div class="content">
+					<p>这是一个利用 Ajax 自动获取用户地理位置和天气状况的小应用。</p>
+					<p><span>技术栈：</span>jQuery + Ajax</p>
+					<p><span>项目亮点：</span>通过 Ajax 请求，获取用户所在城市和未来一周的天气状况。</p>
+				</div>
+				<div class="footer">
+					<svg class="shouye"><use xlink:href="#icon-shouye"></use></svg>
+					<svg><use xlink:href="#icon-prog-jquery"></use></svg>
+					<svg class="ajax"><use xlink:href="#icon-ajax"></use></svg>
+					<p>查看源码</p>
+					<p>点击体验</p>
+				</div>
+			</li>
 			<li class="lol">
 				<div class="background"></div>
 				<div class="header">
@@ -155,6 +175,26 @@
 					<svg><use xlink:href="#icon-LOL"></use></svg>
 					<svg><use xlink:href="#icon-prog-jquery"></use></svg>
 					<svg class="html"><use xlink:href="#icon-icon-html"></use></svg>
+					<p>查看源码</p>
+					<p>点击体验</p>
+				</div>
+			</li>
+			<li class="pikachu">
+				<div class="background"></div>
+				<div class="header">
+					<h3>纯CSS绘图：皮卡丘</h3>
+					<svg><use xlink:href="#icon-pc"></use></svg>
+					<svg><use xlink:href="#icon-shouji"></use></svg>
+				</div>
+				<img src="https://i.loli.net/2017/11/20/5a12a243ee91c.png" alt="cover">
+				<div class="content">
+					<p>这是一个纯粹使用 CSS 实现绘制的矢量皮卡丘。</p>
+					<p><span>技术栈：</span>CSS</p>
+					<p><span>项目亮点：</span>针对不同尺寸的设备所设置的响应式布局，以及精致的 CSS 绘图。</p>
+				</div>
+				<div class="footer">
+					<svg class="shandian"><use xlink:href="#icon-shandian"></use></svg>
+					<svg><use xlink:href="#icon-CSS-"></use></svg>
 					<p>查看源码</p>
 					<p>点击体验</p>
 				</div>
@@ -224,7 +264,7 @@
 			<h3>Web/GitHub：<a href="https://github.com/330387398" target="view_window">https://github.com/330387398</a></h3>
 		</div>
 	</section>
-	<script src="https://at.alicdn.com/t/font_375856_a54xyzhnbz30izfr.js"></script>
+	<script src="https://at.alicdn.com/t/font_375856_6etczqopl3j714i.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="./resume.js"></script>
 </body>
