更新简历内容

--- a/resume.html
+++ b/resume.html
@@ -141,7 +141,7 @@
 			<li class="weather">
 				<div class="background"></div>
 				<div class="header">
-					<h3>Ajax 天气小插件</h3>
+					<h3>Ajax 天气插件</h3>
 					<svg><use xlink:href="#icon-pc"></use></svg>
 				</div>
 				<img src="https://i.loli.net/2017/11/20/5a12a19a7b43c.png" alt="cover">
